arm32 build failure after 8223136 (Move compressed oops functions to CompressedOops class)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 13
    • Affects Version/s: 13
    • Component/s: hotspot
    • gc
    • b21

      arm32:

      /home/buildbot/worker/jdkX-linux/build/src/hotspot/cpu/arm/c1_CodeStubs_arm.cpp: In member function 'virtual void PatchingStub::emit_code(LIR_Assembler*)':
      /home/buildbot/worker/jdkX-linux/build/src/hotspot/cpu/arm/c1_CodeStubs_arm.cpp:286:43: error: 'Universe' has not been declared
             __ patchable_mov_oop(_obj, (jobject)Universe::non_oop_word(), _index);
                                                 ^~~~~~~~
      /home/buildbot/worker/jdkX-linux/build/src/hotspot/cpu/arm/c1_CodeStubs_arm.cpp:288:50: error: 'Universe' has not been declared
             __ patchable_mov_metadata(_obj, (Metadata*)Universe::non_oop_word(), _index);

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: