8223675: arm32 build failure after 8223136 (Move compressed oops functions to CompressedOops class)

Reviewed-by: rkennke